syntax = "proto3";
package kardiachain.consensus;

option go_package = "github.com/kardiachain/go-kardia/proto/kardiachain/consensus";

import "gogoproto/gogo.proto";
import "kardiachain/types/types.proto";
import "kardiachain/libs/bits/types.proto";

// NewRoundStep is sent for every step taken in the ConsensusState.
// For every height/round/step transition
message NewRoundStep {
    uint64  height                   = 1;
    uint32  round                    = 2;
    uint32 step                     = 3;
    uint64  seconds_since_start_time = 4;
    uint32  last_commit_round        = 5;
}

// NewValidBlock is sent when a validator observes a valid block B in some round r,
//i.e., there is a Proposal for block B and 2/3+ prevotes for the block B in the round r.
// In case the block is also committed, then IsCommit flag is set to true.
message NewValidBlock {
    uint64                          height                = 1;
    uint32                          round                 = 2;
    kardiachain.types.PartSetHeader block_part_set_header = 3 [(gogoproto.nullable) = false];
    kardiachain.libs.bits.BitArray  block_parts           = 4;
    bool                           is_commit             = 5;
}


// Proposal is sent when a new block is proposed.
message Proposal {
    kardiachain.types.Proposal proposal = 1 [(gogoproto.nullable) = false];
}


// ProposalPOL is sent when a previous proposal is re-proposed.
message ProposalPOL {
    uint64                         height             = 1;
    uint32                         proposal_pol_round = 2;
    kardiachain.libs.bits.BitArray proposal_pol       = 3 [(gogoproto.nullable) = false];
}

// BlockPart is sent when gossipping a piece of the proposed block.
message BlockPart {
    uint64                 height = 1;
    uint32                 round  = 2;
    kardiachain.types.Part part   = 3 [(gogoproto.nullable) = false];
}
  
// Vote is sent when voting for a proposal (or lack thereof).
message Vote {
    kardiachain.types.Vote vote = 1;
}
  
// HasVote is sent to indicate that a particular vote has been received.
message HasVote {
    uint64                          height = 1;
    uint32                          round  = 2;
    kardiachain.types.SignedMsgType type   = 3;
    uint32                          index  = 4;
}
  
  // VoteSetMaj23 is sent to indicate that a given BlockID has seen +2/3 votes.
message VoteSetMaj23 {
    uint64                          height   = 1;
    uint32                          round    = 2;
    kardiachain.types.SignedMsgType type     = 3;
    kardiachain.types.BlockID       block_id = 4 [(gogoproto.customname) = "BlockID", (gogoproto.nullable) = false];
}
  
  // VoteSetBits is sent to communicate the bit-array of votes seen for the BlockID.
message VoteSetBits {
    uint64                          height   = 1;
    uint32                          round    = 2;
    kardiachain.types.SignedMsgType type     = 3;
    kardiachain.types.BlockID       block_id = 4 [(gogoproto.customname) = "BlockID", (gogoproto.nullable) = false];
    kardiachain.libs.bits.BitArray  votes    = 5 [(gogoproto.nullable) = false];
}
  
message Message {
    oneof sum {
      NewRoundStep  new_round_step  = 1;
      NewValidBlock new_valid_block = 2;
      Proposal      proposal        = 3;
      ProposalPOL   proposal_pol    = 4;
      BlockPart     block_part      = 5;
      Vote          vote            = 6;
      HasVote       has_vote        = 7;
      VoteSetMaj23  vote_set_maj23  = 8;
      VoteSetBits   vote_set_bits   = 9;
    }
}